Agregada biblioteca MyBatis

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,15 @@ dist.jar=${dist.dir}/empenoFacil.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mybatis-3.4.6.jar=lib\\mybatis-3.4.6.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.mybatis-3.4.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,6 +58,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.mybatis-3.4.6.jar=lib/mybatis-3.4.6-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -109,5 +113,6 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.mybatis-3.4.6.jar=lib/mybatis-3.4.6-sources.jar
 src.dir=src
 test.src.dir=test
