--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/empenoFacil.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.formsfx-core-1.3.0.jar=lib\\formsfx-core-1.3.0.jar
 file.reference.mybatis-3.4.6.jar=lib\\mybatis-3.4.6.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.mybatis-3.4.6.jar}
+    ${file.reference.mybatis-3.4.6.jar}:\
+    ${file.reference.formsfx-core-1.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,6 +62,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.formsfx-core-1.3.0.jar=lib/formsfx-core-1.3.0-javadoc.jar
 javadoc.reference.mybatis-3.4.6.jar=lib/mybatis-3.4.6-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
@@ -117,6 +120,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.formsfx-core-1.3.0.jar=lib/formsfx-core-1.3.0-sources.jar
 source.reference.mybatis-3.4.6.jar=lib/mybatis-3.4.6-sources.jar
 src.dir=src
 test.src.dir=test
