--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,8 +29,11 @@ dist.jar=${dist.dir}/empenoFacil.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.bridj-0.6.2.jar=lib\\bridj-0.6.2.jar
 file.reference.formsfx-core-1.3.0.jar=lib\\formsfx-core-1.3.0.jar
 file.reference.mybatis-3.4.6.jar=lib\\mybatis-3.4.6.jar
+file.reference.slf4j-api-1.7.2.jar=lib\\slf4j-api-1.7.2.jar
+file.reference.webcam-capture-0.3.12-20161206.184756-3.jar=lib\\webcam-capture-0.3.12-20161206.184756-3.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -39,7 +42,10 @@ javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mybatis-3.4.6.jar}:\
-    ${file.reference.formsfx-core-1.3.0.jar}
+    ${file.reference.formsfx-core-1.3.0.jar}:\
+    ${file.reference.bridj-0.6.2.jar}:\
+    ${file.reference.slf4j-api-1.7.2.jar}:\
+    ${file.reference.webcam-capture-0.3.12-20161206.184756-3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
