Agregadas pruebas Inicio de sedión - Empleado Agregadas bibliotecas JavaFX JUnit-4 Testrunner y TestFX Agregada clase utilitaria de pruebas (UtilTest.java)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,9 +31,12 @@ endorsed.classpath=
 excludes=
 file.reference.bridj-0.7.0.jar=lib\\bridj-0.7.0.jar
 file.reference.formsfx-core-1.3.0.jar=lib\\formsfx-core-1.3.0.jar
+file.reference.jfx-testrunner-1.2.jar=lib\\jfx-testrunner-1.2.jar
 file.reference.mybatis-3.4.6.jar=lib\\mybatis-3.4.6.jar
 file.reference.slf4j-api-1.7.2.jar=lib\\slf4j-api-1.7.2.jar
 file.reference.slf4j-simple-1.7.2.jar=lib\\slf4j-simple-1.7.2.jar
+file.reference.testfx-core-4.0.15-alpha.jar=lib\\testfx-core-4.0.15-alpha.jar
+file.reference.testfx-junit-4.0.15-alpha.jar=lib\\testfx-junit-4.0.15-alpha.jar
 file.reference.webcam-capture-0.3.12.jar=lib\\webcam-capture-0.3.12.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -60,7 +63,11 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.jfx-testrunner-1.2.jar}:\
+    ${file.reference.formsfx-core-1.3.0.jar}:\
+    ${file.reference.testfx-junit-4.0.15-alpha.jar}:\
+    ${file.reference.testfx-core-4.0.15-alpha.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -71,7 +78,10 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
 javadoc.reference.formsfx-core-1.3.0.jar=lib/formsfx-core-1.3.0-javadoc.jar
+javadoc.reference.jfx-testrunner-1.2.jar=lib/jfx-testrunner-1.2-javadoc.jar
 javadoc.reference.mybatis-3.4.6.jar=lib/mybatis-3.4.6-javadoc.jar
+javadoc.reference.testfx-core-4.0.15-alpha.jar=lib/testfx-core-4.0.15-alpha-javadoc.jar
+javadoc.reference.testfx-junit-4.0.15-alpha.jar=lib/testfx-junit-4.0.15-alpha-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -129,6 +139,9 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 source.reference.formsfx-core-1.3.0.jar=lib/formsfx-core-1.3.0-sources.jar
+source.reference.jfx-testrunner-1.2.jar=lib/jfx-testrunner-1.2-sources.jar
 source.reference.mybatis-3.4.6.jar=lib/mybatis-3.4.6-sources.jar
+source.reference.testfx-core-4.0.15-alpha.jar=lib/testfx-core-4.0.15-alpha-sources.jar
+source.reference.testfx-junit-4.0.15-alpha.jar=lib/testfx-junit-4.0.15-alpha-sources.jar
 src.dir=src
 test.src.dir=test
