Modulo:creación de reportes

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,25 @@ dist.jar=${dist.dir}/empenoFacil.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.barbecue-1.5-beta1.jar=lib\\barbecue-1.5-beta1.jar
 file.reference.bridj-0.7.0.jar=lib\\bridj-0.7.0.jar
+file.reference.commons-beanutils-1.8.0.jar=lib\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=lib\\commons-collections-2.1.1.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
 file.reference.formsfx-core-1.3.0.jar=lib\\formsfx-core-1.3.0.jar
+file.reference.groovy-all-2.0.1.jar=lib\\groovy-all-2.0.1.jar
+file.reference.iText-2.1.7.js2.jar=lib\\iText-2.1.7.js2.jar
+file.reference.jasper-compiler-jdt.jar=lib\\jasper-compiler-jdt.jar
+file.reference.jasperreports-5.5.0.jar=lib\\jasperreports-5.5.0.jar
+file.reference.javax.mail.jar=lib\\javax.mail.jar
+file.reference.javax.servlet-3.0.0.v201112011016.jar=lib\\javax.servlet-3.0.0.v201112011016.jar
 file.reference.jfx-testrunner-1.2.jar=lib\\jfx-testrunner-1.2.jar
+file.reference.jpedal_gpl.jar=lib\\jpedal_gpl.jar
 file.reference.mybatis-3.4.6.jar=lib\\mybatis-3.4.6.jar
 file.reference.slf4j-api-1.7.2.jar=lib\\slf4j-api-1.7.2.jar
 file.reference.slf4j-simple-1.7.2.jar=lib\\slf4j-simple-1.7.2.jar
+file.reference.sqljdbc4.jar=lib\\sqljdbc4.jar
 file.reference.testfx-core-4.0.15-alpha.jar=lib\\testfx-core-4.0.15-alpha.jar
 file.reference.testfx-junit-4.0.15-alpha.jar=lib\\testfx-junit-4.0.15-alpha.jar
 file.reference.webcam-capture-0.3.12.jar=lib\\webcam-capture-0.3.12.jar
@@ -50,7 +63,20 @@ javac.classpath=\
     ${file.reference.bridj-0.7.0.jar}:\
     ${file.reference.slf4j-api-1.7.2.jar}:\
     ${file.reference.webcam-capture-0.3.12.jar}:\
-    ${file.reference.slf4j-simple-1.7.2.jar}
+    ${file.reference.slf4j-simple-1.7.2.jar}:\
+    ${file.reference.barbecue-1.5-beta1.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasper-compiler-jdt.jar}:\
+    ${file.reference.jasperreports-5.5.0.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.javax.servlet-3.0.0.v201112011016.jar}:\
+    ${file.reference.jpedal_gpl.jar}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
