--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,6 @@ nbdist/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Otros archivos
+jasper/[PATH_TO_DB_FILES]/
